--- a/client/index.html
+++ b/client/index.html
@@ -64,6 +64,8 @@
           <script src="app/main/main.js"></script>
           <script src="components/modal/modal.service.js"></script>
           <script src="components/navbar/navbar.controller.js"></script>
+          <script src="components/task/task-edit.directive.js"></script>
+          <script src="components/task/task-view.directive.js"></script>
           <!-- endinjector -->
         <!-- endbuild -->
 </body>
